[project]
name = "13-blogagentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-groq>=0.3.8",
    "langgraph>=0.6.7",
    "langgraph-cli[inmem]>=0.4.2",
    "pydantic>=2.11.9",
    "uvicorn>=0.36.0",
    "watchdog>=6.0.0",
]
